--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:match*",
-      "destination": "http://api.jay9.me//:match*"
+      "destination": "https://api.jay9.me//:match*"
     }
   ]
 }
